[gd_scene load_steps=2 format=3 uid="uid://bgrfmbdih2bpq"]

[ext_resource type="Script" uid="uid://mt88akwqbncs" path="res://collision/boxes/hit_box/hit_box.gd" id="1_wyjcg"]

[node name="HitBox" type="Area2D"]
collision_layer = 48
collision_mask = 0
monitoring = false
script = ExtResource("1_wyjcg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]

[node name="ImmunityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
